--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -1,7 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
+# This is a basic workflow to help you get started with Action
 name: CI
-
 # Controls when the workflow will run
 on: workflow_dispatch
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -9,7 +7,6 @@ on: workflow_dispatch
   #   branches: [ "main" ]
   # pull_request:
   #   branches: [ "main" ]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
