--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -1,23 +1,13 @@
 name: Firstaction
 on: workflow_dispatch
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+  first-Job:
+    runs-on:  ubuntu-latest
+    steps: 
+      - name: Print name and Hello world
+        run: echo "Hello World! its me Nivea"
+      - name: Print Multi line script
         run: |
-          echo Hi Nivea,
-          echo How are you
+            echo "Hi Nivea"
+            echo Welcomw
+        
