--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -17,7 +17,7 @@ jobs:
         run: echo Hiiii
       - name: Print Multi line script
         run: |
-            echo Hiii
+            echo "Hiii"
             echo Helloo
             
 
