--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,5 @@
 name: testpipeline1
-
-# Controls when the workflow will run
+run-name: ${{ github.actor }} is testing this pipeline
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
